--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   
-  
+<style>
+  .modal-content {
+    background-color: #ffffff00 !important;
+  }
+</style>
   
 </head>
 <body>
@@ -164,37 +168,37 @@
     <ol class="carousel-indicators hero">
       <li data-target="#myCarousel" data-slide-to="0" class="active">
             <div class="col-md-6 room-thumb">
-                <img src="img1.jpg" class="room-thumbnails">
+                <img src="assets/images/img1.jpg" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div>
         </li>
       <li data-target="#myCarousel" data-slide-to="1">
             <div class="col-md-6 room-thumb">
-                <img src="img2.jpg" class="room-thumbnails">
+                <img src="assets/images/img2.jpg" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div>
         </li>
       <li data-target="#myCarousel" data-slide-to="2">
             <div class="col-md-6 room-thumb">
-                <img src="img3.jpg" class="room-thumbnails">
+                <img src="assets/images/img3.jpg" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div>
         </li>
       <li data-target="#myCarousel" data-slide-to="3">
             <div class="col-md-6 room-thumb">
-                <img src="img4.jpg" class="room-thumbnails">
+                <img src="assets/images/img4.jpg" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div> 
         </li>
       <li data-target="#myCarousel" data-slide-to="4">
             <div class="col-md-6 room-thumb">
-                <img src="img5.jpg" class="room-thumbnails">
+                <img src="assets/images/img5.jpg" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div>
         </li>
       <li data-target="#myCarousel" data-slide-to="5">
             <div class="col-md-6 room-thumb">
-                <img src="img6.jpg" class="room-thumbnails">
+                <img src="assets/images/img6.jpg" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div> 
         </li>
@@ -303,7 +307,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
+        <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
         <div class="modal-img"><img src="assets/images/dsc-126-600x409.jpg" alt=""></div>
@@ -322,7 +326,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
+        <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
         <div class="modal-img"><img src="assets/images/dsc-66-600x409.jpg" alt=""></div>
@@ -341,7 +345,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
+        <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
         <div class="modal-img"><img src="assets/images/dsc-74-600x386.jpg" alt=""></div>
@@ -360,7 +364,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
+        <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
         <div class="modal-img"><img src="assets/images/dsc-62-600x409.jpg" alt=""></div>
@@ -379,7 +383,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
+        <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
         <div class="modal-img"><img src="assets/images/dsc-87-600x409.jpg" alt=""></div>
@@ -398,7 +402,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
+        <h4 class="modal-title"></h4>
       </div>
       <div class="modal-body">
         <div class="modal-img"><img src="assets/images/dsc-98-600x409.jpg" alt=""></div>
