--- a/index.html
+++ b/index.html
@@ -137,23 +137,23 @@
     <div class="col-md-12 no-pad">
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="img1.jpg"  alt="">  
+                <img src="img1.JPG"  alt="">  
               </div>
 
               <div class="item">
-                  <img src="img2.jpg"  alt="">
+                  <img src="img2.JPG"  alt="">
                 </div>
                 <div class="item">
-                  <img src="img3.jpg"  alt="">     
+                  <img src="img3.JPG"  alt="">     
                 </div>
                 <div class="item">
-                <img src="img4.jpg"  alt="">  
+                <img src="img4.JPG"  alt="">  
               </div>
               <div class="item">
-                <img src="img5.jpg"  alt=""> 
+                <img src="img5.JPG"  alt=""> 
               </div>
               <div class="item">
-                <img src="img6.jpg"  alt="">  
+                <img src="img6.JPG"  alt="">  
               </div>
             </div>
             <div class="col-md-12 room-details">
