--- a/index.html
+++ b/index.html
@@ -137,23 +137,23 @@
     <div class="col-md-12 no-pad">
             <div class="carousel-inner" role="listbox">
               <div class="item active">
-                <img src="img1.JPG"  alt="">  
+                <img src="assets/images/img1.JPG"  alt="">  
               </div>
 
               <div class="item">
-                  <img src="img2.JPG"  alt="">
+                  <img src="assets/images/img2.JPG"  alt="">
                 </div>
                 <div class="item">
-                  <img src="img3.JPG"  alt="">     
+                  <img src="assets/images/img3.JPG"  alt="">     
                 </div>
                 <div class="item">
-                <img src="img4.JPG"  alt="">  
+                <img src="assets/images/img4.JPG"  alt="">  
               </div>
               <div class="item">
-                <img src="img5.JPG"  alt=""> 
+                <img src="assets/images/img5.JPG"  alt=""> 
               </div>
               <div class="item">
-                <img src="img6.JPG"  alt="">  
+                <img src="assets/images/img6.JPG"  alt="">  
               </div>
             </div>
             <div class="col-md-12 room-details">
@@ -168,37 +168,37 @@
     <ol class="carousel-indicators hero">
       <li data-target="#myCarousel" data-slide-to="0" class="active">
             <div class="col-md-6 room-thumb">
-                <img src="assets/images/img1.jpg" class="room-thumbnails">
+                <img src="assets/images/img1.JPG" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div>
         </li>
       <li data-target="#myCarousel" data-slide-to="1">
             <div class="col-md-6 room-thumb">
-                <img src="assets/images/img2.jpg" class="room-thumbnails">
+                <img src="assets/images/img2.JPG" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div>
         </li>
       <li data-target="#myCarousel" data-slide-to="2">
             <div class="col-md-6 room-thumb">
-                <img src="assets/images/img3.jpg" class="room-thumbnails">
+                <img src="assets/images/img3.JPG" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div>
         </li>
       <li data-target="#myCarousel" data-slide-to="3">
             <div class="col-md-6 room-thumb">
-                <img src="assets/images/img4.jpg" class="room-thumbnails">
+                <img src="assets/images/img4.JPG" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div> 
         </li>
       <li data-target="#myCarousel" data-slide-to="4">
             <div class="col-md-6 room-thumb">
-                <img src="assets/images/img5.jpg" class="room-thumbnails">
+                <img src="assets/images/img5.JPG" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div>
         </li>
       <li data-target="#myCarousel" data-slide-to="5">
             <div class="col-md-6 room-thumb">
-                <img src="assets/images/img6.jpg" class="room-thumbnails">
+                <img src="assets/images/img6.JPG" class="room-thumbnails">
                 <div class="search-icon-overlay"><i class="fa fa-search view-room"></i></div>
             </div> 
         </li>
